music-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant
spec:
  replicas: 1
  selector: {}
  template:
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: music-assistant
          image: ghcr.io/music-assistant/server:latest
          volumeMounts:
            - name: data
              mountPath: /data
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: web
              containerPort: 8095
            - name: devices
              containerPort: 8097
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - k3s-1
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: music-assistant-data
